--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -25,9 +25,12 @@ body,
 }
 
 .bubble-wrap {
-  margin: 0 auto;
+  margin: 0 0 0 5%;
   display: flex;
   flex-direction: column;
+  height: 100%;
+  width: 100%;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
 
 .colors-wrap {
